# matrix_display

./: .gitignore  .travis.yml  Cargo.toml  README.md  publish_docs.sh
docs/: MatrixDisplay.t.html  aliases.js  index.html  search-index.js  settings.html  source-files.js  struct.Format.html
docs/ansi_term/: enum.Colour.html  fn.ANSIByteStrings.html  fn.ANSIStrings.html  index.html  struct.ANSIGenericString.html  struct.Infix.html  struct.Prefix.html  struct.Style.html  struct.Suffix.html  type.ANSIByteString.html  type.ANSIByteStrings.html  type.ANSIString.html  type.ANSIStrings.html
docs/cell/: AnsiColor.t.html  sidebar-items.js  struct.Cell.html
docs/implementors/string_morph/: trait.Morph.js
docs/matrix/position/: index.html  sidebar-items.js
docs/matrix_display/: all.html  index.html  sidebar-items.js  struct.Format.html  struct.MatrixDisplay.html
docs/matrix_display/cell/: index.html  struct.AnsiColor.html  struct.Cell.html
docs/matrix_display/matrix/: index.html  sidebar-items.js  struct.Matrix.html
docs/matrix_display/style/: enum.BordersStyle.html  index.html  sidebar-items.js
docs/src/ansi_term/: ansi.rs.html  debug.rs.html  difference.rs.html  lib.rs.html  (+4 more)
docs/string_morph/: all.html  index.html  sidebar-items.js  trait.Morph.html
docs/unicode_types/: all.html  index.html  sidebar-items.js
docs/unicode_width/: constant.UNICODE_VERSION.html  index.html  trait.UnicodeWidthChar.html  trait.UnicodeWidthStr.html
examples/: 2048.rs  chess.rs  palette.rs
src/: cell.rs  lib.rs  pad.rs  position.rs  style.rs
src/matrix/: mod.rs  position.rs
(+960 files in other folders)
